deployment/pipeline.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: passwordwebsite
  name: passwordwebsite-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: passwordwebsite
  template: 
    metadata: 
      labels: 
        app: passwordwebsite
    spec: 
      containers: 
          - image: sachinmahanin/passwordwebsite:latest
            name: webappservice          
            ports: 
              - containerPort: 8080
                protocol: TCP
