deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service  
spec:
  selector:
    app: passwordwebsite
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
