deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password-app-ingress
spec:
  defaultBackend:
    service:
      name: sachinpassword
      port:
        number: 8080
  rules:
    - host: sachinpassword.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strengthservice
                port:
                  number: 18605
